--- a/Laptop_Price_Predictor.ipynb
+++ b/Laptop_Price_Predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de6b9102",
+   "id": "a5191b6d",
    "metadata": {},
    "source": [
     "# Importing libraries\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "20c94e5b",
+   "id": "f4a78f35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7216b9c2",
+   "id": "375f198c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c53ebb9",
+   "id": "e17ae6ef",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7b51c341",
+   "id": "4bce549d",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "696cdc8f",
+   "id": "2879ffbb",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9cbec94e",
+   "id": "85f4bb17",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e8684705",
+   "id": "8d81fb98",
    "metadata": {},
    "outputs": [
     {
@@ -436,11 +436,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c71e9ce",
+   "execution_count": 10,
+   "id": "b2200d25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.drop(columns= [\"Unnamed: 0\"], inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6bd04671",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 2.3GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 640</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>71378.6832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1440x900</td>\n",
+       "      <td>Intel Core i5 1.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 6000</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.34kg</td>\n",
+       "      <td>47895.5232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HP</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>30636.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>IPS Panel Retina Display 2880x1800</td>\n",
+       "      <td>Intel Core i7 2.7GHz</td>\n",
+       "      <td>16GB</td>\n",
+       "      <td>512GB SSD</td>\n",
+       "      <td>AMD Radeon Pro 455</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.83kg</td>\n",
+       "      <td>135195.3360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 3.1GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 650</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>96095.8080</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Company   TypeName  Inches                    ScreenResolution   \n",
+       "0   Apple  Ultrabook    13.3  IPS Panel Retina Display 2560x1600  \\\n",
+       "1   Apple  Ultrabook    13.3                            1440x900   \n",
+       "2      HP   Notebook    15.6                   Full HD 1920x1080   \n",
+       "3   Apple  Ultrabook    15.4  IPS Panel Retina Display 2880x1800   \n",
+       "4   Apple  Ultrabook    13.3  IPS Panel Retina Display 2560x1600   \n",
+       "\n",
+       "                          Cpu   Ram               Memory   \n",
+       "0        Intel Core i5 2.3GHz   8GB            128GB SSD  \\\n",
+       "1        Intel Core i5 1.8GHz   8GB  128GB Flash Storage   \n",
+       "2  Intel Core i5 7200U 2.5GHz   8GB            256GB SSD   \n",
+       "3        Intel Core i7 2.7GHz  16GB            512GB SSD   \n",
+       "4        Intel Core i5 3.1GHz   8GB            256GB SSD   \n",
+       "\n",
+       "                            Gpu  OpSys  Weight        Price  \n",
+       "0  Intel Iris Plus Graphics 640  macOS  1.37kg   71378.6832  \n",
+       "1        Intel HD Graphics 6000  macOS  1.34kg   47895.5232  \n",
+       "2         Intel HD Graphics 620  No OS  1.86kg   30636.0000  \n",
+       "3            AMD Radeon Pro 455  macOS  1.83kg  135195.3360  \n",
+       "4  Intel Iris Plus Graphics 650  macOS  1.37kg   96095.8080  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0b927c6",
+   "metadata": {},
+   "source": [
+    "drop the unnamed 0 column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5e35ad86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1303, 11)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b2333f",
+   "metadata": {},
+   "source": [
+    "The code returns 1303 rows and 11 columns.\n",
+    "Columns reduced from 12 to 11 from the original dataset columns after droping the Unnamed column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "80d60a31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Ram'] = data['Ram'].str.replace(\"GB\", \" \")\n",
+    "data['Weight'] = data['Weight'].str.replace(\"kg\", \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a4341d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 2.3GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 640</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>71378.6832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1440x900</td>\n",
+       "      <td>Intel Core i5 1.8GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>128GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 6000</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>47895.5232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HP</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>30636.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>IPS Panel Retina Display 2880x1800</td>\n",
+       "      <td>Intel Core i7 2.7GHz</td>\n",
+       "      <td>16</td>\n",
+       "      <td>512GB SSD</td>\n",
+       "      <td>AMD Radeon Pro 455</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>135195.3360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 3.1GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 650</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>96095.8080</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Company   TypeName  Inches                    ScreenResolution   \n",
+       "0   Apple  Ultrabook    13.3  IPS Panel Retina Display 2560x1600  \\\n",
+       "1   Apple  Ultrabook    13.3                            1440x900   \n",
+       "2      HP   Notebook    15.6                   Full HD 1920x1080   \n",
+       "3   Apple  Ultrabook    15.4  IPS Panel Retina Display 2880x1800   \n",
+       "4   Apple  Ultrabook    13.3  IPS Panel Retina Display 2560x1600   \n",
+       "\n",
+       "                          Cpu  Ram               Memory   \n",
+       "0        Intel Core i5 2.3GHz   8             128GB SSD  \\\n",
+       "1        Intel Core i5 1.8GHz   8   128GB Flash Storage   \n",
+       "2  Intel Core i5 7200U 2.5GHz   8             256GB SSD   \n",
+       "3        Intel Core i7 2.7GHz  16             512GB SSD   \n",
+       "4        Intel Core i5 3.1GHz   8             256GB SSD   \n",
+       "\n",
+       "                            Gpu  OpSys Weight        Price  \n",
+       "0  Intel Iris Plus Graphics 640  macOS  1.37    71378.6832  \n",
+       "1        Intel HD Graphics 6000  macOS  1.34    47895.5232  \n",
+       "2         Intel HD Graphics 620  No OS  1.86    30636.0000  \n",
+       "3            AMD Radeon Pro 455  macOS  1.83   135195.3360  \n",
+       "4  Intel Iris Plus Graphics 650  macOS  1.37    96095.8080  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae42b0e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Ram'] = data[\"Ram\"].astype('int32)"
+   ]
   }
  ],
  "metadata": {
